--- a/package.json
+++ b/package.json
@@ -3,31 +3,8 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "build:all": "echo 'Build is now handled in GitHub Actions'",
-    "dev:intro": "slidev --base /lessons/introduction/ lessons/introduction/slides.md --port 3030",
-    "dev:hello": "slidev --base /lessons/python/hello_world/ lessons/python/hello_world/slides.md --port 3030",
-    "dev:operators": "slidev --base /lessons/python/operators/ lessons/python/operators/slides.md --port 3030",
-    "dev:conditionals": "slidev --base /lessons/python/conditionals/ lessons/python/conditionals/slides.md --port 3030",
-    "dev:while_loops": "slidev --base /lessons/python/while_loops/ lessons/python/while_loops/slides.md --port 3030",
-    "dev:for_loops": "slidev --base /lessons/python/for_loops/ lessons/python/for_loops/slides.md --port 3030",
-    "dev:functions": "slidev --base /lessons/python/functions/ lessons/python/functions/slides.md --port 3030",
-    "dev:recap": "slidev --base /lessons/python/recap/ lessons/python/recap/slides.md --port 3030",
-    "dev:data_analysis": "slidev --base /lessons/data_science/data_analysis/ lessons/data_science/data_analysis/slides.md --port 3030",
-    "dev:lists": "slidev --base /lessons/python/lists/ lessons/python/lists/slides.md --port 3030",
-    "dev:statistics_with_lists": "slidev --base /lessons/data_science/statistics_with_lists/ lessons/data_science/statistics_with_lists/slides.md --port 3030",
-    "export:intro": "slidev export --per-slide --format pdf --output exports/introduction.pdf lessons/introduction/slides.md",
-    "export:hello": "slidev export --per-slide --format pdf --output exports/python-hello-world.pdf lessons/python/hello_world/slides.md",
-    "export:operators": "slidev export --per-slide --format pdf --output exports/python-operators.pdf lessons/python/operators/slides.md",
-    "export:conditionals": "slidev export --per-slide --format pdf --output exports/python-conditionals.pdf lessons/python/conditionals/slides.md",
-    "export:while_loops": "slidev export --per-slide --format pdf --output exports/python-while-loops.pdf lessons/python/while_loops/slides.md",
-    "export:for_loops": "slidev export --per-slide --format pdf --output exports/python-for-loops.pdf lessons/python/for_loops/slides.md",
-    "export:functions": "slidev export --per-slide --format pdf --output exports/python-functions.pdf lessons/python/functions/slides.md",
-    "export:recap": "slidev export --per-slide --format pdf --timeout 60000 --output exports/python-recap.pdf lessons/python/recap/slides.md",
-    "export:data_analysis": "slidev export --per-slide --format pdf --output exports/data-science-data-analysis.pdf lessons/data_science/data_analysis/slides.md",
-    "export:lists": "slidev export --per-slide --timeout 60000 --format pdf --output exports/python-lists.pdf lessons/python/lists/slides.md",
-    "export:statistics_with_lists": "slidev export --per-slide --format pdf --output exports/data-science-statistics-with-lists.pdf lessons/data_science/statistics_with_lists/slides.md",
-    "export:dicts": "slidev export --per-slide --format pdf --output exports/python-dicts.pdf lessons/python/dicts/slides.md",
-    "export:group_by": "slidev export --per-slide --format pdf --output exports/data-science-group-by.pdf lessons/data_science/group_by/slides.md"
+    "dev": "slidev --base $(dirname $npm_config_slides) $npm_config_slides --port 3030",
+    "export": "slidev export --per-slide --format pdf --output exports/$(basename $(dirname $npm_config_slides)).pdf $npm_config_slides"
   },
   "dependencies": {
     "@slidev/cli": "^52.0.0",
